fix: tablet overflow

--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -168,6 +168,7 @@ a {
   grid-template-columns: auto auto auto auto;
   grid-gap: 40px 40px;
   margin: 0 auto;
+  overflow: auto;
 }
 
 #products p {
